--- a/RimageConfigSetting/frmHelp.resx
+++ b/RimageConfigSetting/frmHelp.resx
@@ -153,7 +153,7 @@
 
 11. CheckFolderSize : 폴더크기를 체크하여 다운로드 완료를 체크한다.
 
-12. TechHeim
+12. TechHeim2
  Caption : ExportDicom, CheckFoler : ViewRex
 
 ----------------------------------------------------------------------------------</value>
