--- a/RimageConfigSetting/frmHelp.resx
+++ b/RimageConfigSetting/frmHelp.resx
@@ -156,6 +156,9 @@
 12. TechHeim2
  Caption : ExportDicom, CheckFoler : ViewRex
 
+13. Compumedics ProFusion
+Caption : Archive Studies, 창이 닫히면 다운로드 완료
+
 ----------------------------------------------------------------------------------</value>
   </data>
 </root>
