아산병원 EGG 명칭 변경

--- a/RimageConfigSetting/frmHelp.resx
+++ b/RimageConfigSetting/frmHelp.resx
@@ -159,6 +159,9 @@
 13. Compumedics ProFusion
 Caption : Archive Studies, 창이 닫히면 다운로드 완료
 
+14. Natus
+Caption : Archiving Done
+
 ----------------------------------------------------------------------------------</value>
   </data>
 </root>
